# operational-alacarte

./: .travis.yml  LICENSE  README.md  operational-alacarte.cabal
examples/: Advanced.hs  Simple.hs
src/Control/Monad/Operational/: Higher.hs
src/Data/: ALaCarte.hs
tests/: Tests.hs
